<resources>
    <string name="app_name">Shoot</string>
    <string name="save_moments">Save Moments</string>
    <string name="add_appointment_on_date">Add Appointment</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="event_name">Event Name</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="enter_time">Enter Time</string>
    <string name="fill_fields">Please fill all the fields</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_call">Call</string>
    <string name="category_suggestions">Suggestions</string>
    <string name="category_appointments">Appointments</string>
    <string name="shoot_pictures">Shoot Pictures</string>
    <string name="view_saved">View Saved</string>
    <string name="add_contact">Add Contact</string>
    <string name="channel_name">Channel01</string>
    <string name="channel_description">Notification Channel</string>
    <string name="name">Name</string>
    <string name="proceed">Proceed</string>
    <string name="enter_name">Please enter name</string>
</resources>
